FIX: Scrollbar now sits to edge of container, not content within the container

--- a/core/components/shared/Dialog.module.css
+++ b/core/components/shared/Dialog.module.css
@@ -40,14 +40,14 @@
 
 .contentContainer {
   background: var(--map-popup-background-color);
+  border-radius: 0 0 var(--map-popup-border-radius) var(--map-popup-border-radius);
   padding: var(--map-popup-content-padding);
-  border-radius: 0 0 var(--map-popup-border-radius)
-    var(--map-popup-border-radius);
-  padding: var(--map-popup-content-padding);
+  padding-right: 0;
   box-shadow: var(--map-popup-box-shadow-inner);
   overflow: hidden;
 }
 
 .content {
   overflow-y: auto;
+  padding-right: 1rem;
 }
